kubernetes/apps/base/ntfy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
  namespace: media
spec:
  selector:
    app: ntfy
  ports:
    - protocol: TCP
      port: 19200
      targetPort: 5000
