kubernetes/apps/base/ntfy/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ntfy
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ntfy.${cluster_domain}`)
      kind: Rule
      services:
        - name: ntfy
          port: 80
